# power-tracker

./: .env.example  .gitignore  .pre-commit-config.yaml  docker-compose.yml  pyproject.toml  requirements-dev.txt  requirements.txt
deploy/: install.sh  install_client.py  install_server.py  powertracker.service
migrations/: 0001_initial_schema.sql
src/power_tracker/: api.py  client.py  consumer.py  database.py  main.py  rabbitmq.py  sensors.py  system_info.py
src/power_tracker/migrations/: 0001_initial_schema.sql
tests/: test_api.py  test_consumer.py  test_database.py  test_sensors.py
